--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -1,53 +1,20 @@
 // CubeScript placed in this file is automatically executed on each startup.
 
-// "editent" command
+// editent command
 // Note: The editent command can NOT define rotation/yaw inside the command!
 //       ... however, the current yaw of the player will define the rotation/yaw when using the command!
 alias editent [
     alias enttype (getenttype)
-    if (= (strcmp (getenttype) "mapmodel") 1) [
+    if (strcmp $enttype "mapmodel")  [
         saycommand "/entset" $enttype (getentattr 1) (getentattr 2) (getentattr 3)
+        ][
+        if (> (findlist "light sound clip" $enttype) -1) [
+            saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
+            ][
+            saycommand "/entset" $enttype (getentattr ((> (findlist "playerstart ctf-flag" $enttype) -1)))
+            ]
+        ]
     ]
-    if (= (strcmp (getenttype) "light") 1) [
-        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
-    ]
-    if (= (strcmp (getenttype) "ammobox") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "sound") 1) [
-        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
-    ]
-    if (= (strcmp (getenttype) "health") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "playerstart") 1) [
-        saycommand "/entset" $enttype (getentattr 1)
-    ]
-    if (= (strcmp (getenttype) "pistol") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "grenades") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "sound") 1) [
-        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
-    ]
-    if (= (strcmp (getenttype) "armour") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "akimbo") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "ladder") 1) [
-        saycommand "/entset" $enttype (getentattr 0)
-    ]
-    if (= (strcmp (getenttype) "ctf-flag") 1) [
-        saycommand "/entset" $enttype (getentattr 1)
-    ]
-    if (= (strcmp (getenttype) "clip") 1) [
-        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
-    ]
-]
 
 alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
 
