cleanup mappack integration
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4248 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -1,3 +1,7 @@
+// check for an installed mappack
+alias mappack_version 0; alias mappack_maps ""; alias mappack_flagmaps ""
+exec config/menus_mappack.cfg
+
 // standard menu definitions
 
 newmenu main
@@ -8,7 +12,7 @@ menuitem "Settings"			"showmenu settings"
 menuitem "Demo"				[ showmenu "Play demo" ]
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
-menuitem "About"			"menu_about"
+menuitem "About"			"showmenu about"
 menuitem "Quit"				"savequit"
 
 
@@ -31,11 +35,11 @@ newmenu maps
 alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	"" -1
+if (&& $mappack_version (listlen $mappack_maps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack maps"]];
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
 newmenu "all maps"
 menudirlist "packages/maps" "cgz" "map $arg1"
-
 
 
 newmenu maps_flags 
@@ -43,8 +47,16 @@ newmenu maps_flags
 alias ctfmaps "ac_depot ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 genmapitems $ctfmaps
 menuitem "" -1
+if (&& $mappack_version (listlen $mappack_flagmaps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack flag maps"]];
 menuitem "Show all maps.." [showmenu "all maps"]
 
+
+if $mappack_version [
+    newmenu "mappack maps"
+    genmapitems $mappack_maps
+    newmenu "mappack flag maps"
+    genmapitems $mappack_flagmaps
+]
 
 newmenu Demo // If in-game (playing demos isn't needed)
 
@@ -71,6 +83,7 @@ newmenu about
 menuitem "AssaultCube v1.0" -1
 menuitem "                     ...Help"		"showmenu help"
 menuitem "                     ...Credits"	"showmenu Credits"
+if $mappack_version [ menuitem "                     ...Map-pack credits" [ showmenu "about mappack" ]];
 menuitem "" -1
 menuitem "by 'Rabid Viper Productions'" "showmenu Credits"
 menuitem "1http://assault.cubers.net/" -1			// URL's are colourised blue, like a hyperlink normally is...
@@ -182,11 +195,4 @@ exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
 exec config/menus_multiplayer.cfg
-
-// Menu-specific stuff for the map-pack.
-exec config/menus_mappack.cfg
-alias menu_about [ if (= $mappackinstalled 0) [ showmenu about ] [ showmenu "Map-pack: About" ] ]
-alias menu_maps [ if (= $mappackinstalled 0) [ showmenu maps ] [ showmenu "Map-pack: Maps" ] ]
-alias menu_maps_flags [ if (= $mappackinstalled 0) [ showmenu maps_flags ] [ showmenu "Map-pack: Flag maps" ] ]
-
 
