--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -93,18 +93,18 @@ menuitem "Initiate autoteam"		"showmenu Auto-team"
 
 newmenu Gamemode
 
-menuitem "Team Deathmatch"		"mode 0; menu_maps"
-menuitem "Deathmatch"			"mode 2; menu_maps"
-menuitem "Team Survivor"		"mode 4; menu_maps"
-menuitem "Survivor"			"mode 3; menu_maps"
-menuitem "Capture the Flag"		"mode 5; menu_maps_flags"
-menuitem "Hunt the Flag"		"mode 13; menu_maps"
-menuitem "Keep the Flag"		"mode 15; menu_maps_flags"
-menuitem "Team Keep the Flag"		"mode 14; menu_maps_flags"
-menuitem "Pistol Frenzy"		"mode 6; menu_maps"
-menuitem "Last Swiss Standing"		"mode 9; menu_maps"
-menuitem "One Shot, One Kill"		"mode 10; menu_maps"
-menuitem "Team One Shot, One Kill"	"mode 11; menu_maps"
+menuitem "Team Deathmatch"		"mode 0; showmenu maps"
+menuitem "Deathmatch"			"mode 2; showmenu maps"
+menuitem "Team Survivor"		"mode 4; showmenu maps"
+menuitem "Survivor"			"mode 3; showmenu maps"
+menuitem "Capture the Flag"		"mode 5; showmenu maps_flags"
+menuitem "Hunt the Flag"		"mode 13; showmenu maps"
+menuitem "Keep the Flag"		"mode 15; showmenu maps_flags"
+menuitem "Team Keep the Flag"		"mode 14; showmenu maps_flags"
+menuitem "Pistol Frenzy"		"mode 6; showmenu maps"
+menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
+menuitem "One Shot, One Kill"		"mode 10; showmenu maps"
+menuitem "Team One Shot, One Kill"	"mode 11; showmenu maps"
 
 
 newmenu Mastermode
