more entity editing keys
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4251 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -137,8 +137,11 @@ alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]	// Ch
 alias delta_edit_2 [ edittex $flrceil $arg1 ]					// Change floor/ceiling textures...
 alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]				// Change wall/upper-wall textures...
 alias delta_edit_4 [ equalize $flrceil ]					// Equalize floor/ceiling...
-alias delta_edit_5 [ entproperty 0 $arg1 ]					// Changes the frist value on entities...
+alias delta_edit_5 [ entproperty 0 $arg1 ]					// Changes the first value on entities...
 alias delta_edit_6 [ entproperty $editaxis $arg1 ]				// Move map entity...
+alias delta_edit_7 [ entproperty 1 $arg1 ]					// Changes the second value on entities...
+alias delta_edit_8 [ entproperty 2 $arg1 ]					// Changes the third value on entities...
+alias delta_edit_9 [ entproperty 3 $arg1 ]					// Changes the fourth value on entities...
 
 // HUD toggles
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
