--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -30,10 +30,10 @@ bind MINUS ""
 bind PERIOD "equalize 2"
 bind SLASH "saycommand /"
 bind 0 ""
-bind 1 "primary"
-bind 2 "secondary"
-bind 3 "grenades"
-bind 4 "melee"
+bind 1 [ if $editing [ domodifier 5 ] [ primary ] ]
+bind 2 [ if $editing [ domodifier 7 ] [ secondary ] ]
+bind 3 [ if $editing [ domodifier 8 ] [ grenades ] ]
+bind 4 [ if $editing [ domodifier 9 ] [ melee ] ]
 bind 5 ""
 bind 6 ""
 bind 7 ""
