added fullscreen to the input settings menu (Not binded to a key by default)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4254 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -196,6 +196,7 @@ menuitemkeyinput "Console output: " toggleconsole
 menuitemkeyinput "Screenshot: "     screenshot
 menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
+menuitemkeyinput "Fullscreen: "	    fullscreenscript
 menuitem "" -1 // Invert mouse is a slider instead of a checkbox so the 2 sensitivity textboxes don't look weird.
 menuitemslider "Invert mouse: " 0 1 "$invmouse" 1 "Disabled Enabled" "invmouse $arg1" 
 menuitemtextinput "Mouse sensitivity:					" "$sensitivity" "sensitivity $arg1"
