--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -16,6 +16,9 @@ alias editent [
         ]
     ]
 
+
+alias fullscreenscript [ if (= $fullscreen 1)[ fullscreen 0 ] [ fullscreen 1 ] ]
+
 alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
 
 // Auto-completions
