--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -32,7 +32,7 @@ alias genmapitems [
 newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
 // Don't add ac_depot_classic to the maps list.
-alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
+alias defaultmaps "ac_aqueous ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	"" -1
 if (&& $mappack_version (listlen $mappack_maps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack maps"]];
@@ -44,7 +44,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_flags 
 // Add maps to the below list to include them in the CTF, KTF & TKTF map menu. Maps should contain flags here.
-alias ctfmaps "ac_depot ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
+alias ctfmaps "ac_aqueous ac_depot ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 genmapitems $ctfmaps
 menuitem "" -1
 if (&& $mappack_version (listlen $mappack_flagmaps)) [menuitem (concatword "Map-pack (version " $mappack_version ") maps...") [showmenu "mappack flag maps"]];
