--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -4,12 +4,12 @@ alias delayed_firstrun [
     music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
     
     new_gfx_quality 2
+    echo "Welcome to AssaultCube"
+    echo "Developed by 'Rabid Viper Productions'"
     echo ""
-    echo "2Welcome to AssaultCube
-    echo "2Developed by 'Rabid Viper Productions'
+    echo "Use the below menu to change some necessary settings..."
     echo ""
-    echo "1Please use the below menu to change some necessary settings..."
-    echo ""
+    echo "Further help & information can be found in your README, which is inside your AssaultCube directory."
 	showmenu "QUICK setup"
 ]
 
