Fixed 3 annoyances: Make status of gfx quality slider independent of "minlod" variable; Make status of reduced violence mode indepent of "blood" variable; make status of sound quality slider independent of "maxsoundsatonce" variable.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4261 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -31,5 +31,6 @@ alias scopesens [ *f $sensitivity $scopesensscale ]
 //bind lalt "melee"
 
 alias askquit 1
-alias mappackinstalled 0 // By default, map-pack is not installed. This alias is here so that AC doesn't complain.
-			 // When mappack is installed, this changes to 1.
+alias gfxqualityalias 2		// Default GFX is medium.
+alias soundqualityalias 3	// Default sound is best.
+
