--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,3 +1,14 @@
+newmenu settings
+	
+menuitem "Video settings"					"showmenu video"
+menuitem "Head-Up Display settings"				"showmenu HUD"
+menuitem "Gameplay settings"					"showmenu gameplay"
+menuitem "Input controls"					"showmenu controls"
+menuitem "Sound settings"					"showmenu sound"
+menuitem "Misc settings"					"showmenu Misoundqualityaliassc"
+menuitem "" -1
+menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
+
 newmenu Weapons
 
 menumdl weapons/assault/menu mapmodel 75 12
@@ -26,46 +37,23 @@ menuitem "Swat"             "skin 4" "chmenumdl RVSF playermodels/RVSF/05 all 50
 menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50 4"
 
 
-newmenu settings
-	
-menuitem "Video settings"					"showmenu video"
-menuitem "Head-Up Display settings"				"showmenu HUD"
-menuitem "Gameplay settings"					"showmenu gameplay"
-menuitem "Input controls"					"showmenu controls"
-menuitem "Sound settings"					"showmenu sound"
-menuitem "Misc settings"					"showmenu Misc"
-menuitem "" -1
-menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
-
 newmenu "QUICK setup"
 
 menuitemtextinput "Nickname:				" 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):			" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Resolution (Height):			" "$scr_h" "scr_h $arg1"
 menuitemtextinput "Mouse sensitivity			" "$sensitivity" "sensitivity $arg1"
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
-menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "$gfxqualityalias" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
+menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "2			  [ OK ]" [ closemenu "QUICK setup"; resetgl ]
 
-alias getgfxq [
-    if (= $minlod 200) [ result 4 ] [
-        if (= $minlod 100) [ result 3 ] [
-            if (= $minlod 60) [ result 2 ] [ result 1 ]
-        ]
-    ]
-]
-
-alias getsoundq [
-    if (= $maxsoundsatonce 10) [ result 3 ] [
-        if (= $maxsoundsatonce 8) [ result 2 ] [ result 1 ]
-    ]
-]
 
 alias new_gfx_quality [
     if (= $arg1 4) [ // highest gfx quality
         fsaa 4
         minlod 200
+	alias gfxqualityalias 4
         fpsrange 100 1000
         watersubdiv 2
         dynlight 1
@@ -83,6 +71,7 @@ alias new_gfx_quality [
         if (= $arg1 3) [ // high
             fsaa 0
             minlod 100
+   	    alias gfxqualityalias 3
             fpsrange 60 60
             watersubdiv 2
             dynlight 1
@@ -100,6 +89,7 @@ alias new_gfx_quality [
             if (= $arg1 2) [ // medium (DEFAULT)
                 fsaa 0
                 minlod 60
+		alias gfxqualityalias 2
                 fpsrange 30 40
                 watersubdiv 4
                 dynlight 1
@@ -126,6 +116,7 @@ alias new_gfx_quality [
             ] [                 // low
                 fsaa 0
                 minlod 25
+		alias gfxqualityalias 1
                 fpsrange 20 25
                 watersubdiv 16
                 dynlight 0
@@ -146,17 +137,20 @@ alias new_gfx_quality [
         
 alias new_sound_quality [
     if (= $arg1 3) [ // high sound (DEFAULT)
+	alias soundqualityalias 3
         maxsoundsatonce 10
         footsteps 1
         bulletairsound 1
         bulletbouncesound 1
     ] [
         if (= $arg1 2) [ // medium
+	    soundqualityalias 2
             maxsoundsatonce 8
             footsteps 1
             bulletairsound 0
             bulletbouncesound 1
         ] [                         // low
+	    soundqualityalias 1
             maxsoundsatonce 5
             footsteps 0
             bulletairsound 0
@@ -305,31 +299,29 @@ menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))]
 newmenu Misc
 
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
-menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemode $arg1"
+menuitemcheckbox "Reduced violence mode: " "$poniesmodeon" "reducedviolencemode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 menuitemcheckbox "Auto-screenshot: " "$autoscreenshot" "autoscreenshot $arg1"
 menuitemslider "Console size: " 0 20 "$consize" 1 "" "consize $arg1"
 
 // Reduced game violence mode...
+alias poniesmodeon 0
 alias reducedviolencemode [
     if (= $arg1 1) [ 
+	alias poniesmodeon 1
         blood 0
         gib 0
         loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // Mute pain sounds
         echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
     ] [ // Violent
+	alias poniesmodeon 0
         blood 1
         gib 1
         loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) 1 ] // Un-mute pain sounds
         echo OMG!Ponies! mode disabled...
     ]
 ]
-alias getponiesmode [
-    result (= $blood 0)
-]
-
-// menuitemcheckbox "I'm attacking: " "(soundmuted 71)" "mutesound 71 (! $arg1)"
 
 newmenu HUD
 
