--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -209,7 +209,7 @@ newmenu video
 menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1" "" 11
 menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1" "" 11
 
-menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 4 "$gfxqualityalias" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
 menuitem "" -1
 
 menuitemslider "Field of view: " 75 120 "$fov" 2 "" "fov $arg1"
@@ -354,7 +354,7 @@ newmenu sound
 
 menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
-menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "Low Medium High" "new_sound_quality $arg1"
+menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
 menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
 
