--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -5,7 +5,7 @@ menuitem "Head-Up Display settings"				"showmenu HUD"
 menuitem "Gameplay settings"					"showmenu gameplay"
 menuitem "Input controls"					"showmenu controls"
 menuitem "Sound settings"					"showmenu sound"
-menuitem "Misc settings"					"showmenu Misoundqualityaliassc"
+menuitem "Misc settings"					"showmenu Misc"
 menuitem "" -1
 menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
 
