--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -326,7 +326,7 @@ alias reducedviolencemode [
 newmenu HUD
 
 menuitem "Show:" -1
-menuitemcheckbox "   Stats " "(= $hidestats 0)" "hidestats (= $arg1 0)"
+menuitemcheckbox "   Graphics statistics " "(= $hidestats 0)" "hidestats (= $arg1 0)"
 menuitemcheckbox "   Gun " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "   Radar " "(= $hideradar 0)" "hideradar (= $arg1 0)"
 menuitemcheckbox "   Team icon " "(= $hideteam 0)" "hideteam (= $arg1 0)"
@@ -338,6 +338,7 @@ menuitemcheckbox "   Quick messages " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1
 menuitemcheckbox "   Damage direction indicator " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
 menuitemcheckbox "   Damage screen flash	" "$damagescreen" "damagescreen $arg1"
 menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsign $arg1"
+menuitemcheckbox "   CTF icons"	"(= $hidectfhud 0)" "hidectfhud  (= $arg1 0)"
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
