Changed "LOW" graphics minlod value to "65" by default, so "strange walls" don't appear on most users PC's. Added minlod issue to the FAQ's.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4271 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -52,7 +52,7 @@ menuitem "2			  [ OK ]" [ closemenu "QUICK setup"; resetgl ]
 alias new_gfx_quality [
     if (= $arg1 4) [ // highest gfx quality
         fsaa 4
-        minlod 200
+        minlod 250
 	alias gfxqualityalias 4
         fpsrange 100 1000
         watersubdiv 2
@@ -70,7 +70,7 @@ alias new_gfx_quality [
     ] [
         if (= $arg1 3) [ // high
             fsaa 0
-            minlod 100
+            minlod 160
    	    alias gfxqualityalias 3
             fpsrange 60 60
             watersubdiv 2
@@ -88,7 +88,7 @@ alias new_gfx_quality [
         ] [
             if (= $arg1 2) [ // medium (DEFAULT)
                 fsaa 0
-                minlod 60
+                minlod 65
 		alias gfxqualityalias 2
                 fpsrange 30 40
                 watersubdiv 4
@@ -115,7 +115,7 @@ alias new_gfx_quality [
                 shotline 1
             ] [                 // low
                 fsaa 0
-                minlod 25
+                minlod 65
 		alias gfxqualityalias 1
                 fpsrange 20 25
                 watersubdiv 16
@@ -230,8 +230,8 @@ newmenu "Advanced video settings"
 alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "Off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
-alias minlod_valuemap "25 60 100 250"
-menuitemslider "Minimal level of detail: " 0 3 "(findlist $minlod_valuemap $minlod)" 1 ["Low" "Decent" "Good" "Best"] "minlod (at $minlod_valuemap $arg1)"
+alias minlod_valuemap "25 65 100 160 250"
+menuitemslider "Minimal level of detail: " 0 4 "(findlist $minlod_valuemap $minlod)" 1 [ "Bad" "Low" "Decent" "Good" "Best"] "minlod (at $minlod_valuemap $arg1)"
 menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
