Graphics menu changes ftw.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4275 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -39,102 +39,161 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 newmenu "QUICK setup"
 
-menuitemtextinput "Nickname:				" 		"" "name $arg1"
-menuitemtextinput "Resolution (Width):			" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Resolution (Height):			" "$scr_h" "scr_h $arg1"
-menuitemtextinput "Mouse sensitivity			" "$sensitivity" "sensitivity $arg1"
-menuitemslider "Graphics detail: " 1 4 "$gfxqualityalias" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
+menuitemtextinput "Nickname:			" "" "name $arg1"
+menuitemtextinput "Resolution (Width):		" "$scr_w" "scr_w $arg1"
+menuitemtextinput "Resolution (Height):		" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Mouse sensitivity		" "$sensitivity" "sensitivity $arg1"
+menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "$soundqualityalias" 1 "Low Medium High" "new_sound_quality $arg1"
 menuitem "" -1
-menuitem "2			  [ OK ]" [ closemenu "QUICK setup"; resetgl ]
+menuitem "2				    [ OK ]" [ closemenu "QUICK setup"; resetgl ]
 
 
 alias new_gfx_quality [
-    if (= $arg1 4) [ // highest gfx quality
-        fsaa 4
-        minlod 250
-	alias gfxqualityalias 4
-        fpsrange 100 1000
-        watersubdiv 2
-        dynlight 1
-        waterreflect 1
-        stencilbits 8
-        stencilshadow 40
-        dynshadow 40
-        lighterror 1
-        scorch 1
-        bullethole 1
-        blood 1
-        gib 1
-        shotline 1
-    ] [
-        if (= $arg1 3) [ // high
-            fsaa 0
-            minlod 160
-   	    alias gfxqualityalias 3
-            fpsrange 60 60
-            watersubdiv 2
-            dynlight 1
-            waterreflect 1
-            stencilbits 8
-            stencilshadow 40
-            dynshadow 40
-            lighterror 4
-            scorch 1
-            bullethole 1
-            blood 1
-            gib 1
-            shotline 1
-        ] [
-            if (= $arg1 2) [ // medium (DEFAULT)
-                fsaa 0
-                minlod 65
-		alias gfxqualityalias 2
-                fpsrange 30 40
-                watersubdiv 4
-                dynlight 1
-                if (glext "GL_ARB_fragment_program") [
-                    // make sure the 3D card is powerful enough for this
-                    waterreflect 1
-                ] [
-                    waterreflect 0
-                ]
-                if (|| (glext "GL_EXT_stencil_two_side") (glext "GL_ATI_separate_stencil")) [
-                    stencilbits 8
-                    stencilshadow 40
-                ] [
-                    stencilbits 0
-                    stencilshadow 0
-                ]
-                dynshadow 40
-                lighterror 4
-                scorch 1
-                bullethole 1
-                blood 1
-                gib 1
-                shotline 1
-            ] [                 // low
-                fsaa 0
-                minlod 65
-		alias gfxqualityalias 1
-                fpsrange 20 25
-                watersubdiv 16
-                dynlight 0
-                waterreflect 0
-                stencilshadow 0
-                stencilbits 0
-                dynshadow 0
-                lighterror 10
-                scorch 0
-                bullethole 0
-                blood 0
-                gib 0
-                shotline 0
-            ]
-        ]
-    ]
-]
-        
+	if (= $arg1 6) [	// "INSANE!" gfx quality
+		fsaa 16
+		minlod 250
+		alias gfxqualityalias 6
+		fpsrange 100 1000
+		watersubdiv 1
+		dynlight 1
+		waterreflect 1
+		stencilbits 32
+		stencilshadow 40
+		dynshadow 40
+		lighterror 1
+		scorch 1
+		bullethole 1
+		blood 1
+		gib 1
+		shotline 1
+		echo "Be mighty careful! This setting puts any & every graphics setting as high as absolutely possible!"
+		bilinear 1
+		mergestrips 1
+		trilinear 1
+		waterrefract 1
+		] [
+		if (= $arg1 5) [	// High gfx quality
+			fsaa 4
+			minlod 200
+			alias gfxqualityalias 5
+			fpsrange 100 1000
+			watersubdiv 2
+			dynlight 1
+			waterreflect 1
+			stencilbits 8
+			stencilshadow 40
+			dynshadow 40
+			lighterror 1
+			scorch 1
+			bullethole 1
+			blood 1
+			gib 1
+			shotline 1
+			bilinear 1
+			mergestrips 1
+			trilinear 1
+			waterrefract 0
+			] [
+			if (= $arg1 4) [	// Good gfx quality
+				fsaa 0
+				minlod 100
+				alias gfxqualityalias 4
+				fpsrange 60 60
+				watersubdiv 2
+				dynlight 1
+				waterreflect 1
+				stencilbits 8
+				stencilshadow 40
+				dynshadow 40
+				lighterror 4
+				scorch 1
+				bullethole 1
+				blood 1
+				gib 1
+				shotline 1
+				bilinear 1
+				mergestrips 1
+				trilinear 1
+				waterrefract 0
+				] [
+				if (= $arg1 3) [	// Medium gfx quality (DEFAULT)
+					fsaa 0
+					minlod 65
+					alias gfxqualityalias 3
+					fpsrange 30 40
+					watersubdiv 4
+					dynlight 1
+					// Makes sure the 3D card is powerful enough for water reflection/shadow stencils...
+					if (glext "GL_ARB_fragment_program") [ waterreflect 1 ] [ waterreflect 0 ]
+					if (|| (glext "GL_EXT_stencil_two_side") (glext "GL_ATI_separate_stencil")) [ 
+						stencilbits 8
+						stencilshadow 40
+						] [
+						stencilbits 0
+						stencilshadow 0 ]
+					dynshadow 40
+					lighterror 4
+					scorch 1
+					bullethole 1
+					blood 1
+					gib 1
+					shotline 1
+					bilinear 1
+					mergestrips 1
+					trilinear 1
+					waterrefract 0
+					] [
+					if (= $arg1 2) [	// Low gfx quality
+						fsaa 0
+						minlod 65
+						alias gfxqualityalias 2
+						fpsrange 20 25
+						watersubdiv 16
+						dynlight 0
+						waterreflect 0
+						stencilshadow 0
+						stencilbits 0
+						dynshadow 0
+						lighterror 10
+						scorch 0
+						bullethole 0
+						blood 0
+						gib 0
+						shotline 0
+						bilinear 1
+						mergestrips 1
+						trilinear 0
+						waterrefract 0
+							] [	// Horrible gfx quality
+							fsaa 0
+							minlod 25
+							alias gfxqualityalias 1
+							fpsrange 20 25
+							watersubdiv 64
+							dynlight 0
+							waterreflect 0
+							stencilshadow 0
+							stencilbits 0
+							dynshadow 0
+							lighterror 16
+							scorch 0
+							bullethole 0
+							blood 0
+							gib 0
+							shotline 0
+							echo "Note: This setting will look really horrible..."
+							bilinear 0
+							mergestrips 0
+							trilinear 0
+							waterrefract 0
+						]
+					]
+				]
+			]
+		]
+	]
+
 alias new_sound_quality [
     if (= $arg1 3) [ // high sound (DEFAULT)
 	alias soundqualityalias 3
@@ -209,7 +268,7 @@ newmenu video
 menuitemtextinput "Screen width:				" "$scr_w" "scr_w $arg1" "" 11
 menuitemtextinput "Screen height:				" "$scr_h" "scr_h $arg1" "" 11
 
-menuitemslider "Graphics detail: " 1 4 "$gfxqualityalias" 1 [Low Medium Good "Best (but slow)"] "new_gfx_quality $arg1"
+menuitemslider "Graphics detail: " 1 6 "$gfxqualityalias" 1 [ Horrible Low Medium Good "High (Performs slow)" "INSANE! (Performs really slow)"] "new_gfx_quality $arg1"
 menuitem "" -1
 
 menuitemslider "Field of view: " 75 120 "$fov" 2 "" "fov $arg1"
@@ -223,7 +282,7 @@ menuitem "" -1
 menuitem "Advanced video settings..."	[ showmenu "Advanced video settings" ]
 
 menuitem "" -1
-menuitem "2		    [ Apply now! ]" resetgl
+menuitem "2			      [ Apply now! ]" resetgl
 
 newmenu "Advanced video settings"
 
