Fix stupid settings that I did... thx eihrul, as always...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4278 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -68,8 +68,6 @@ alias new_gfx_quality [
 		gib 1
 		shotline 1
 		echo "Be mighty careful! This setting puts any & every graphics setting as high as absolutely possible!"
-		bilinear 1
-		mergestrips 1
 		trilinear 1
 		waterrefract 1
 		] [
@@ -90,8 +88,6 @@ alias new_gfx_quality [
 			blood 1
 			gib 1
 			shotline 1
-			bilinear 1
-			mergestrips 1
 			trilinear 1
 			waterrefract 0
 			] [
@@ -112,14 +108,12 @@ alias new_gfx_quality [
 				blood 1
 				gib 1
 				shotline 1
-				bilinear 1
-				mergestrips 1
 				trilinear 1
 				waterrefract 0
 				] [
 				if (= $arg1 3) [	// Medium gfx quality (DEFAULT)
 					fsaa 0
-					minlod 65
+					minlod 60
 					alias gfxqualityalias 3
 					fpsrange 30 40
 					watersubdiv 4
@@ -139,14 +133,12 @@ alias new_gfx_quality [
 					blood 1
 					gib 1
 					shotline 1
-					bilinear 1
-					mergestrips 1
 					trilinear 1
 					waterrefract 0
 					] [
 					if (= $arg1 2) [	// Low gfx quality
 						fsaa 0
-						minlod 65
+						minlod 60
 						alias gfxqualityalias 2
 						fpsrange 20 25
 						watersubdiv 16
@@ -161,13 +153,11 @@ alias new_gfx_quality [
 						blood 0
 						gib 0
 						shotline 0
-						bilinear 1
-						mergestrips 1
 						trilinear 0
 						waterrefract 0
 							] [	// Horrible gfx quality
 							fsaa 0
-							minlod 25
+							minlod 60
 							alias gfxqualityalias 1
 							fpsrange 20 25
 							watersubdiv 64
@@ -182,9 +172,6 @@ alias new_gfx_quality [
 							blood 0
 							gib 0
 							shotline 0
-							echo "Note: This setting will look really horrible..."
-							bilinear 0
-							mergestrips 0
 							trilinear 0
 							waterrefract 0
 						]
@@ -289,8 +276,8 @@ newmenu "Advanced video settings"
 alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "Off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
-alias minlod_valuemap "25 65 100 160 250"
-menuitemslider "Minimal level of detail: " 0 4 "(findlist $minlod_valuemap $minlod)" 1 [ "Bad" "Low" "Decent" "Good" "Best"] "minlod (at $minlod_valuemap $arg1)"
+alias minlod_valuemap "60 100 200 250"
+menuitemslider "Minimal level of detail: " 0 4 "(findlist $minlod_valuemap $minlod)" 1 [ "Low" "Decent" "Good" "Best" ] "minlod (at $minlod_valuemap $arg1)"
 menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 
 alias watersubdiv_valuemap "16 8 4 2 1"
