Editing stuff... changelog too.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4289 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -114,7 +114,7 @@ menuitem "Inhcanyons1 skymap"			[ loadsky "textures/skymaps/ladynighthawk/inhcan
 menuitem "Nightball skymap"			[ loadsky "textures/skymaps/socksky/nightball" ]
 menuitem "Grave skymap"				[ loadsky "textures/skymaps/socksky/grave" ]
 
-
+alias _closestenttypestatus 1
 //Map operations
 newmenu "Map operations"
 
@@ -125,7 +125,70 @@ menuitem "Create/edit a map message"		"menumapmsg"
 menuitem "Change waterlevel"			"saycommand /waterlevel "
 menuitem "Change watercolour"			[ showmenu "Water colour" ]
 menuitem "Print entity stats"			"entstats"
+menuitem "Select the next closest entity"	"nextclosestent"
 menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
+menuitemslider "Select only these entities: " 1 14 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip" "_closestentslider $arg1"
+
+
+// "closestenttype" slider...
+alias _closestentslider [
+  if (= $arg1 14) [ 
+    alias _closestenttypestatus 14
+    closestenttype clip
+    ] [
+    if (= $arg1 13) [ 
+      alias _closestenttypestatus 13
+      closestenttype sound
+      ] [
+      if (= $arg1 12) [ 
+        alias _closestenttypestatus 12
+        closestenttype ctf-flag
+        ] [
+        if (= $arg1 11) [ 
+          alias _closestenttypestatus 11
+          closestenttype ladder
+          ] [
+          if (= $arg1 10) [ 
+            alias _closestenttypestatus 10
+            closestenttype mapmodel
+            ] [
+            if (= $arg1 9) [ 
+              alias _closestenttypestatus 9
+              closestenttype akimbo
+              ] [
+              if (= $arg1 8) [ 
+                alias _closestenttypestatus 8
+                closestenttype armour
+                ] [
+                if (= $arg1 7) [ 
+                  alias _closestenttypestatus 7
+                  closestenttype health
+                  ] [
+                  if (= $arg1 6) [ 
+                    alias _closestenttypestatus 6
+                    closestenttype grenades
+                    ] [
+                    if (= $arg1 5) [ 
+                      alias _closestenttypestatus 5
+                      closestenttype ammobox
+                      ] [
+                      if (= $arg1 4) [ 
+                        alias _closestenttypestatus 4
+                        closestenttype pistol
+                        ] [
+                        if (= $arg1 3) [ 
+                          alias _closestenttypestatus 3
+                          closestenttype playerstart
+                          ] [
+                          if (= $arg1 2) [
+                            alias _closestenttypestatus 2
+                            closestenttype light
+                            ] [
+                            if (= $arg1 1) [
+                              alias _closestenttypestatus 1
+                              closestenttype ""
+                              ] ] ] ] ] ] ] ] ] ] ] ] ] ] ]
+
 
 // Map-message edit/creation menu
 alias menumapmsg [ if (= (strcmp (getmapmsg) "Untitled Map by Unknown") 1) [ showmenu "Create a map message" ] [ showmenu "Edit a map message" ] ]
@@ -302,7 +365,7 @@ menuitem "Wire fence"			"newent mapmodel 13"
 menuitem "Wire fencepost"		"newent mapmodel 14"
 menuitem "Open wire fence-gate"		"newent mapmodel 15" 
 menuitem "Closed wire fence-gate"	"newent mapmodel 16"
-menuitem "Barbwire fence-top"		"newent mapmodel 126"
+menuitem "Barbwire fence-top"		"newent mapmodel 127"
 menuitem "" -1
 menuitem "Corrugated fence"		"newent mapmodel 102"
 menuitem "Corrugated fence 2"		"newent mapmodel 103"
