--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -114,81 +114,23 @@ menuitem "Inhcanyons1 skymap"			[ loadsky "textures/skymaps/ladynighthawk/inhcan
 menuitem "Nightball skymap"			[ loadsky "textures/skymaps/socksky/nightball" ]
 menuitem "Grave skymap"				[ loadsky "textures/skymaps/socksky/grave" ]
 
-alias _closestenttypestatus 1
+alias _closestenttypestatus 0
 //Map operations
 newmenu "Map operations"
 
 menuitem "Newmap (128x128 cubes - recommended)"	"newmap 7"
 menuitem "Newmap (256x256 cubes)"		"newmap 8"
 menuitem "Increase mapsize (2x)"		[ mapenlarge; echo "The map size has been increased by 2. However, the new space is solid. To utilize it, you will need to turn it into space, by selecting it and pressing G" ]
-menuitem "Create/edit a map message"		"menumapmsg"
+menuitem "Create/edit a map message"			"menumapmsg"
 menuitem "Change waterlevel"			"saycommand /waterlevel "
 menuitem "Change watercolour"			[ showmenu "Water colour" ]
 menuitem "Print entity stats"			"entstats"
 menuitem "Select the next closest entity"	"nextclosestent"
 menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
-menuitemslider "Select only these entities: " 1 14 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip" "_closestentslider $arg1"
-
+menuitemslider "Select only these entities: " 0 13 "$_closestenttypestatus" 1 "All Light Playerstart Pistol Ammobox Grenades Health Armour Akimbo Mapmodel Ladder CTF-flag Sound Clip" "_closestentslider $arg1"
 
 // "closestenttype" slider...
-alias _closestentslider [
-  if (= $arg1 14) [ 
-    alias _closestenttypestatus 14
-    closestenttype clip
-    ] [
-    if (= $arg1 13) [ 
-      alias _closestenttypestatus 13
-      closestenttype sound
-      ] [
-      if (= $arg1 12) [ 
-        alias _closestenttypestatus 12
-        closestenttype ctf-flag
-        ] [
-        if (= $arg1 11) [ 
-          alias _closestenttypestatus 11
-          closestenttype ladder
-          ] [
-          if (= $arg1 10) [ 
-            alias _closestenttypestatus 10
-            closestenttype mapmodel
-            ] [
-            if (= $arg1 9) [ 
-              alias _closestenttypestatus 9
-              closestenttype akimbo
-              ] [
-              if (= $arg1 8) [ 
-                alias _closestenttypestatus 8
-                closestenttype armour
-                ] [
-                if (= $arg1 7) [ 
-                  alias _closestenttypestatus 7
-                  closestenttype health
-                  ] [
-                  if (= $arg1 6) [ 
-                    alias _closestenttypestatus 6
-                    closestenttype grenades
-                    ] [
-                    if (= $arg1 5) [ 
-                      alias _closestenttypestatus 5
-                      closestenttype ammobox
-                      ] [
-                      if (= $arg1 4) [ 
-                        alias _closestenttypestatus 4
-                        closestenttype pistol
-                        ] [
-                        if (= $arg1 3) [ 
-                          alias _closestenttypestatus 3
-                          closestenttype playerstart
-                          ] [
-                          if (= $arg1 2) [
-                            alias _closestenttypestatus 2
-                            closestenttype light
-                            ] [
-                            if (= $arg1 1) [
-                              alias _closestenttypestatus 1
-                              closestenttype ""
-                              ] ] ] ] ] ] ] ] ] ] ] ] ] ] ]
-
+alias _closestentslider [ closestenttype (at ["" light playerstart pistol ammobox grenades health armour akimbo mapmodel ladder ctf-flag sound clip] $arg1); alias _closestenttypestatus $arg1 ]
 
 // Map-message edit/creation menu
 alias menumapmsg [ if (= (strcmp (getmapmsg) "Untitled Map by Unknown") 1) [ showmenu "Create a map message" ] [ showmenu "Edit a map message" ] ]
