--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -358,13 +358,13 @@ alias reducedviolencemode [
 	alias poniesmodeon 1
         blood 0
         gib 0
-        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // Mute pain sounds
+        loop i 8 [ mutesound (+ $i 24) 0 ] // Mute pain sounds : 24..31
         echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
     ] [ // Violent
 	alias poniesmodeon 0
         blood 1
         gib 1
-        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) 1 ] // Un-mute pain sounds
+        loop i 8 [ mutesound (+ $i 24) 1 ] // Un-mute pain sounds
         echo OMG!Ponies! mode disabled...
     ]
 ]
