more convenient demo handling
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4340 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -12,4 +12,14 @@ alias cleardemo [ callvote 10 $arg1 ]
 alias cleardemos [ callvote 10 0 ]
 alias serverdesc [ callvote 11 $arg1 ]
 alias shuffleteams [ callvote 12 ]
-alias demo [ mode -1; map $arg1 ]
+
+alias demo [
+    alias _demofile $arg1
+    if $connected [
+        alias mapstartonce [mode -1; map $_demofile]
+        disconnect
+    ][
+        mode -1; map $_demofile
+    ]
+]
+
