--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -76,7 +76,14 @@ newmenu "Play demo"	// If not in-game (recording/downloading demos isn't needed)
 menuinit [ echo "To stop demo playback, type: 3/stopdemo" ]
 menudirlist "demos/" "dmo" "demo $arg1"
 
-
+// in-game menu that opens when pressing escape while watching a demo.
+newmenu "Watching demo"
+menuitem "Stop watching demo" "stopdemo"
+menuitem "Restart demo" "demo $_demofile"
+menuitem "Watch other demo" [stopdemo; closemenu "Watching demo"; showmenu "Play demo"]
+menuitem "" -1
+menuitem "4Main menu..."		[ closemenu "Watching demo"; showmenu main ]
+menuitem "3Quit AssaultCube"		"savequit"
 
 newmenu about
 
