--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -13,7 +13,7 @@ bind TAB [ showscores 1; onrelease [ showscores 0 ] ]
 bind CLEAR ""
 bind RETURN ""
 bind PAUSE ""
-bind ESCAPE [ if $connected [ ingamemenu ] [ showmenu main ] ]
+bind ESCAPE [ if $connected [ ingamemenu ] [ if (watchingdemo) [ showmenu "Watching demo" ] [ showmenu main ] ] ]
 bind SPACE "jump"
 bind EXCLAIM ""
 bind QUOTEDBL ""
