--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -23,7 +23,7 @@ alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
 
 // Auto-completions
 alias mapcomplete [complete $arg1 "packages/maps/official packages/maps" cgz]
-mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf"
+mapcommands = "map tdm coop dm lms ts ctf pf lss osok tosok htf vip tktf ktf sendmap"
 loop i (listlen $mapcommands) [
     mapcomplete (at $mapcommands $i)
 ]
