simple map revisioning system
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4357 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -140,9 +140,11 @@ menuinitselection 1
 newmenu getmap
 menuitem "      This server is using a different version of this map..." -1
 menuitem "" -1
+menuitemvar "result $__getmaprevisions"
+menuitem "" -1
 menuitem "2    [ Download the servers map version and join the game ]" "getmap"
 menuitem "3 [ Keep the local map version and disconnect from the server ]" [ showmenu ""; disconnect ]
-menuinitselection 2
+menuinitselection 4
 
 newmenu voicecom 1 1
 
