--- a/ac/packages/maps/official/ac_aqueous.cfg
+++ b/ac/packages/maps/official/ac_aqueous.cfg
@@ -406,3 +406,50 @@ texture 0 "./wotwot/urban/hatch1.jpg"
 texture 0 "./wotwot/urban/manhole1.jpg"
 texture 0 "./makke/door_metal.jpg"
 texture 0 "./makke/door_rust.jpg"
+mapsoundreset
+mapsound "./ambience/cavedrip.ogg" -1
+mapsound "./ambience/distant_cars.ogg" -1
+mapsound "./ambience/hum01.ogg" -1
+mapsound "./ambience/hum02.ogg" -1
+mapsound "./ambience/night_crickets.ogg" -1
+mapsound "./ambience/water.ogg" -1
+mapsound "./ambience/wind.ogg" -1
+mapsound "./ambience/t_aircond.ogg" -1
+mapsound "./ambience/t_compressor.ogg" -1
+mapsound "./ambience/t_crow.ogg" -1
+mapsound "./ambience/t_dogs01.ogg" -1
+mapsound "./ambience/t_helicopter.ogg" -1
+mapsound "./ambience/t_hum01.ogg" -1
+mapsound "./ambience/t_hum02.ogg" -1
+mapsound "./ambience/t_hum03.ogg" -1
+mapsound "./ambience/t_hum04.ogg" -1
+mapsound "./ambience/t_night_dog.ogg" -1
+mapsound "./ambience/t_night01.ogg" -1
+mapsound "./ambience/t_night02.ogg" -1
+mapsound "./ambience/t_radio_comms.ogg" -1
+mapsound "./ambience/t_radio_static.ogg" -1
+mapsound "./ambience/t_satcoms.ogg" -1
+mapsound "./ambience/t_sludge.ogg" -1
+mapsound "./ambience/t_static01.ogg" -1
+mapsound "./ambience/t_static02.ogg" -1
+mapsound "./ambience/t_vent01.ogg" -1
+mapsound "./ambience/t_vent02.ogg" -1
+mapsound "./ambience/t_water_owl.ogg" -1
+mapsound "./ambience/t_water01.ogg" -1
+mapsound "./ambience/t_waterdrip.ogg" -1
+mapsound "./ambience/t_wind.ogg" -1
+mapsound "./ambience/t_waterpipe01.ogg" -1
+mapsound "./ambience/t_waterpipe02.ogg" -1
+mapsound "./ambience/warningalarm01.ogg" -1
+mapsound "./ambience/t_gastank.ogg" -1
+mapsound "./ambience/t_keyboard.ogg" 1
+mapsound "./ambience/t_factory01.ogg" -1
+mapsound "./ambience/t_vents.ogg" -1
+mapsound "./ambience/t_waterfront.ogg" -1
+mapsound "./ambience/t_generator.ogg" -1
+mapsound "./ambience/t_electricbuzz.ogg" -1
+mapsound "./ambience/t_alarm01.ogg" -1
+mapsound "./ambience/flies.ogg" -1
+mapsound "./ambience/deserthawk.ogg" -1
+mapsound "./ambience/owl.ogg" -1
+mapsound "./ambience/citynoisebirds.ogg" -1
