it also changes gibs..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4423 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -310,7 +310,7 @@ menuitemcheckbox "Dynamic lights: " "$dynlight" "dynlight $arg1"
 
 menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
 menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
-menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
+menuitemcheckbox "Blood/Gibs: " "$blood" "blood $arg1; gib $arg1"
 menuitem "Enable 0.93 FOV compatiblity..." [ fovcompat; sleep 100 [ fovcompatmenu ] ]
 menuitem "" -1
 menuitem "FPS Range..." [ showmenu "FPS Range" ]
