insanely overpowered serverbrowser favourites
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4446 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -4,6 +4,7 @@ alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-gam
 // "Join server" menu.
 alias joinservermenu [ searchlan 1
 		showallservers 1
+		showonlyfavourites 0
 		updatefrommaster
 		showmenu server
 	]
@@ -121,13 +122,66 @@ newmenu "serverbrowser help"
 
 menuitem "F1: Display this help menu" -1
 menuitem "F3: Search for players by nickname..." [ showmenu "search player" ]
+menuitem "F4: Edit favourites..." "showmenu [edit favourites]"
 menuitem "F5: Update the serverlist from the masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
+menuitem "" -1
+menuitem "Options:" -1
 menuitemcheckbox "F6: Reverse the sort order:" "$serversortdir" "serversortdir $arg1"
 menuitemcheckbox "F7: Only show good servers:" "$showonlygoodservers" "showonlygoodservers $arg1"
 menuitemcheckbox "F8: Show minutes remaining:" "$showminremain" "showminremain $arg1"
-menuitem "" -1
-menuitemslider "Sort servers by: " 0 7 "$serversort" 1 [ "Ping" "Number of players" "Max players" "Minutes remaining" "Map name" "Gamemode" "IP address" "Server description"] "serversort $arg1"
+menuitemcheckbox "Sort official maps ontop:" "$serversortpreferofficial" "serversortpreferofficial $arg1"
+menuitemslider "Favourites tag column:	" 0 2 "$serverbrowserhidefavtag" 1 [ "Show always" "Show when used" "Hide always"] "serverbrowserhidefavtag $arg1"
+menuitemslider "Server IP & port:		" 0 2 "$serverbrowserhideip" 1 [ "Show" "Show in grey" "Hide"] "serverbrowserhideip $arg1"
+menuitemslider "Sort servers by:		" 0 7 "$serversort" 1 [ "Ping" "Number of players" "Max players" "Minutes remaining" "Map name" "Gamemode" "IP address" "Server description"] "serversort $arg1"
 menuinitselection 1
+
+addfavcategory 1
+sbfavourite_1_alpha = 0
+sbfavourite_1_weight = 10
+
+addfavcategory 2
+sbfavourite_2_alpha = 0
+sbfavourite_2_weight = 0
+
+addfavcategory 3
+sbfavourite_3_alpha = 0
+sbfavourite_3_weight = -10
+
+alias addfavcatmenu [
+        i = (+ 1 (findlist (listfavcats) $arg1))
+	newmenu "edit favourites"
+	if (< $i 11) [
+		menuitemvar (concatword "concat " (mod $i 10) ":  $" sbfavourite_ $arg1 _desc) (concatword "showmenu [favourites " $i "]")
+		newmenu "serverbrowser help"
+		menuitemvar (concatword "concat " $i ":  Toggle category $" sbfavourite_ $arg1 _desc) -1
+	][
+		menuitemvar (concatword "result $" sbfavourite_ $arg1 _desc) (concatword "showmenu [favourites " $i "]")
+	]
+	newmenu (concat favourites $i)
+	menuitemtextinput "Tag:  " (concatword "result $" sbfavourite_ $arg1 _tag) (concatword sbfavourite_ $arg1 _tag " = $arg1") "" 15
+	menuitemtextinput "Description:  " (concatword "result $" sbfavourite_ $arg1 _desc) (concatword sbfavourite_ $arg1 _desc " = $arg1") "" 45
+	menuitem "" -1
+	menuitemslider "Background red:	" 0 100 (concatword "$" sbfavourite_ $arg1 _red) 10 "" (concatword sbfavourite_ $arg1 _red " = $arg1")
+	menuitemslider "Background green:	" 0 100 (concatword "$" sbfavourite_ $arg1 _green) 10 "" (concatword sbfavourite_ $arg1 _green " = $arg1")
+	menuitemslider "Background blue:	" 0 100 (concatword "$" sbfavourite_ $arg1 _blue) 10 "" (concatword sbfavourite_ $arg1 _blue " = $arg1")
+	menuitemslider "Background alpha:	" 0 100 (concatword "$" sbfavourite_ $arg1 _alpha) 10 "" (concatword sbfavourite_ $arg1 _alpha " = $arg1")
+	menuitem "" -1
+	menuitemtextinput "Keyword list:  " (concatword "result $" sbfavourite_ $arg1 _keys) (concatword sbfavourite_ $arg1 _keys " = $arg1") "" 255
+	menuitem "" -1
+	menuitemtextinput "Weight:  " (concatword "result $" sbfavourite_ $arg1 _weight) (concatword sbfavourite_ $arg1 _weight " = $arg1") "" 10
+	menuitem "" -1
+	menuitemslider "" 0 1 (concatword "result $" sbfavourite_ $arg1 _ignore) 1 [ "Enable this category" "Ignore this category" ] (concatword sbfavourite_ $arg1 _ignore " = $arg1")
+	menuitem "" -1
+	menuitem "Show servers of this category" (concat showonlyfavourites $i ";showmenu server") "showonlyfavourites 0"
+]
+
+alias addallfavcatmenus [
+	newmenu "serverbrowser help"
+	menuitem "" -1
+	menuitem "Keys to add/remove servers from categories:" -1
+	loop ii (listlen (listfavcats)) [addfavcatmenu (at (listfavcats) $ii)]
+]
+alias mpmap [(+ 1 (findlist $mappack_maps $arg1))]
 
 alias lastsearchname ""
 
