--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -58,9 +58,11 @@ alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset
 
 // "changeteam" command.
 alias changeteam [
-    if (= (curteam) 1) [ team CLA ] [ team RVSF ]
-    if (= (curteam) 0) [ echo "You are now on team 3CLA" ] [ echo "You are now on team 1RVSF" ]
+    if (= (curteam) 1) [ team CLA; alias tmp_oldteam 1 ] [ team RVSF; alias tmp_oldteam 0 ]
+    if (= (curteam) 0) [ if (= $tmp_oldteam 0) [ echo "You stayed on team 3CLA" ] [ echo "You switched to team 3CLA" ] ]
+    if (= (curteam) 1) [ if (= $tmp_oldteam 1) [ echo "You stayed on team 1RVSF" ] [ echo "You switched to team 1RVSF" ] ]
 ]
+
 
 // Mode/map-setting aliases.
 alias votemap [ mode $arg1; map $arg2 ]
