favourites.cfg added
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4511 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -202,4 +202,5 @@ exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
 exec config/menus_multiplayer.cfg
+exec config/favourites.cfg
 
