--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -135,27 +135,15 @@ menuitemslider "Server IP & port:		" 0 2 "$serverbrowserhideip" 1 [ "Show" "Show
 menuitemslider "Sort servers by:		" 0 7 "$serversort" 1 [ "Ping" "Number of players" "Max players" "Minutes remaining" "Map name" "Gamemode" "IP address" "Server description"] "serversort $arg1"
 menuinitselection 1
 
-addfavcategory 1
-sbfavourite_1_alpha = 0
-sbfavourite_1_weight = 10
-
-addfavcategory 2
-sbfavourite_2_alpha = 0
-sbfavourite_2_weight = 0
-
-addfavcategory 3
-sbfavourite_3_alpha = 0
-sbfavourite_3_weight = -10
-
 alias addfavcatmenu [
         i = (+ 1 (findlist (listfavcats) $arg1))
 	newmenu "edit favourites"
 	if (< $i 11) [
-		menuitemvar (concatword "concat " (mod $i 10) ":  $" sbfavourite_ $arg1 _desc) (concatword "showmenu [favourites " $i "]")
+		menuitemvar (concatword "concat " (mod $i 10) ":  $" sbfavourite_ $arg1 _desc " (concatword <s $" sbfavourite_ $arg1 _tag " r>)") (concatword "showmenu [favourites " $i "]")
 		newmenu "serverbrowser help"
-		menuitemvar (concatword "concat " $i ":  Toggle category $" sbfavourite_ $arg1 _desc) -1
+		menuitemvar (concatword "concat " $i ":  Toggle category $" sbfavourite_ $arg1 _desc " (concatword <s $" sbfavourite_ $arg1 _tag " r>)") -1
 	][
-		menuitemvar (concatword "result $" sbfavourite_ $arg1 _desc) (concatword "showmenu [favourites " $i "]")
+		menuitemvar (concatword "result $" sbfavourite_ $arg1 _desc " (concatword <s $" sbfavourite_ $arg1 _tag " r>)") (concatword "showmenu [favourites " $i "]")
 	]
 	newmenu (concat favourites $i)
 	menuitemtextinput "Tag:  " (concatword "result $" sbfavourite_ $arg1 _tag) (concatword sbfavourite_ $arg1 _tag " = $arg1") "" 15
@@ -181,7 +169,6 @@ alias addallfavcatmenus [
 	menuitem "Keys to add/remove servers from categories:" -1
 	loop ii (listlen (listfavcats)) [addfavcatmenu (at (listfavcats) $ii)]
 ]
-alias mpmap [(+ 1 (findlist $mappack_maps $arg1))]
 
 alias lastsearchname ""
 
