--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -21,6 +21,7 @@ menuitem "Set mode/map..."		"showmenu Gamemode"
 menuitem "Kick/ban player..."		"showmenu kick/ban"
 menuitem "Adjust teams..."		[ showmenu "Team adjustment" ]
 menuitem "Download a demo..."		[ listdemos; showmenu "Download demo" ]
+menuitem "Get additional server information" "showmenu [serverinfo]"
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
 menuitem "4Browse servers..."	[ closemenu "In-game"; joinservermenu ]
@@ -124,6 +125,7 @@ menuitem "F1: Display this help menu" -1
 menuitem "F3: Search for players by nickname..." [ showmenu "search player" ]
 menuitem "F4: Edit favourites..." "showmenu [edit favourites]"
 menuitem "F5: Update the serverlist from the masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
+menuitem "F9: Get additional server information" "showmenu [serverinfo]"
 menuitem "" -1
 menuitem "Options:" -1
 menuitemcheckbox "F6: Reverse the sort order:" "$serversortdir" "serversortdir $arg1"
