--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -1,4 +1,6 @@
 resetsecuremaps
+securemap ac_aqueous
+securemap ac_arid
 securemap ac_arctic
 securemap ac_complex
 securemap ac_douze
@@ -9,6 +11,7 @@ securemap ac_desert2
 securemap ac_desert3
 securemap ac_elevation
 securemap ac_gothic
+securemap ac_iceroad
 securemap ac_keller
 securemap ac_mines
 securemap ac_power
